--- a/abstract-algebra.cabal
+++ b/abstract-algebra.cabal
@@ -14,8 +14,10 @@ extra-source-files:  README.md
 cabal-version:       >=1.10
 
 library
-  hs-source-dirs:      src
+  hs-source-dirs:      src/Group
   exposed-modules:     Group
+                     , Cyclic
+                     , Symmetric
   build-depends:       base >= 4.7 && < 5
                      , ghc-prim >= 0.5.0.0
                      , containers >= 0.5.7.1
