--- a/abstract-algebra.cabal
+++ b/abstract-algebra.cabal
@@ -30,6 +30,7 @@ executable abstract-algebra-exe
   build-depends:       base
                      , abstract-algebra
                      , containers >= 0.5.7.1
+                     , diagrams >= 1.4
   default-language:    Haskell2010
 
 test-suite abstract-algebra-test
